Fixed input not showing in the PC

--- a/hangman/styles/styles.css
+++ b/hangman/styles/styles.css
@@ -12,9 +12,6 @@
   .simple-keyboard {
     display: none;
   }
-  .input {
-    display: none;
-  }
 }
 
 body {
